--- a/button-click-pulsing-effectpure-css/index.html
+++ b/button-click-pulsing-effectpure-css/index.html
@@ -2,15 +2,11 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Button click pulsing effect - Pure CSS</title>
+  <title>ClickAnimationsButton</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<h1>Pure CSS pulsing<br>button effect</h1>
 <a class="button">Click Me</a>
-<!-- partial -->
-  
 </body>
 </html>
