--- a/copy-button-click-effect/index.html
+++ b/copy-button-click-effect/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Copy Button Click Effect</title>
+  <title>Copy Button Click Effect</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
