--- a/material-ui-stretch-button/index.html
+++ b/material-ui-stretch-button/index.html
@@ -2,12 +2,11 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Material UI stretch button</title>
+  <title> Material UI stretch button</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
 <div class="container">
   <div class="bar bar-grey">
     <div class="option">ONE</div>
@@ -22,7 +21,6 @@
     </div>
   </div>
 </div>
-<!-- partial -->
   <script  src="./script.js"></script>
 
 </body>
