modified:   scss-beveled-buttons/index.html

--- a/scss-beveled-buttons/index.html
+++ b/scss-beveled-buttons/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - SCSS Beveled Buttons</title>
+  <title>SCSS Beveled Buttons</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Chewy|Didact+Gothic'><link rel="stylesheet" href="./style.css">
 
@@ -10,8 +10,8 @@
 <body>
 <!-- partial:index.partial.html -->
 <input type="checkbox" name="button" id="button">
-<label class="bevel" for="button">Get Bevel’d</label>
-<span>Bevel Up</span>
+<label class="bevel" for="button">Küldés</label>
+<span>Küld el</span>
 <!-- partial -->
   
 </body>
